--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,11 @@
 title: San Francisco
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Are you from San Francisco and are looking for a place where safely park your car? Or are you wondering if theft car crime
+  escalated over the years? Leveraging public safety datasets from the City and County of San Francisco, this analysis aims to give 
+  a data-driven answer to these questions and unveil some interesting patterns.
+  Through the use of bar plot and interactive district maps the users will be able to 
+  identify the major trends in car theft in San Francisco area.
 baseurl:  # the subpath of your site, e.g. /blog
 url:  # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
