--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: San Francisco
-email: your-email@example.com
+title: San Francisco Daily Analyst
+email: hardhittingjournalism@sfda.com
 description: >- # this means to ignore newlines until "baseurl:"
   Are you from San Francisco and are looking for a place where safely park your car? Or are you wondering if theft car crime
   escalated over the years? Leveraging public safety datasets from the City and County of San Francisco, this analysis aims to give 
@@ -28,8 +28,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   identify the major trends in car theft in San Francisco area.
 baseurl:  # the subpath of your site, e.g. /blog
 url:  # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: sfdailyanalyst
+github_username:  sfdailyanalyst
 
 remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
